--- a/proyecto6/src/app/app.component.html
+++ b/proyecto6/src/app/app.component.html
@@ -7,22 +7,7 @@
 <!-- SimpleLightbox plugin CSS-->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-  <div class="container px-4 px-lg-5">
-    <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-      aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ms-auto my-2 my-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<app-navigation></app-navigation>
 <!-- Masthead-->
 <header class="masthead">
   <div class="container px-4 px-lg-5 h-100">
