--- a/proyecto6/src/app/navigation/navigation.component.html
+++ b/proyecto6/src/app/navigation/navigation.component.html
@@ -13,5 +13,5 @@
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
-    </div>
+    </div
   </nav>
